# QuantumVE

./: .gitignore  CITATION.cff  Demo.ipynb  LICENCE  LICENSE  README.md  README.md~  pyproject.toml  requirements.txt  requirements.txt~  token.txt
.ipynb_checkpoints/: Qiskit_1-checkpoint.ipynb
Fokker-Plank-Solution/: Parameter inference via Kramers-Moyal coefficient.ipynb  multi_target_prediction_FPE_R1_GF.ipynb
MAE_backbones/: engine_finetune.py  main_finetune-cross_val.py  main_finetune.py
MAE_backbones/finetune_mobileNet/: finetune_mobile.py  mobileNet.ipynb  mobileNet_audio-inference-quinn-qiskit.ipynb
MAE_backbones/meta_model_quinn/: MAE_audio-cross_val.ipynb  MAE_audio-inference-quinn.ipynb  MAE_audio-inference.ipynb  MAE_audio.ipynb  mae_visualize.ipynb
Netket/: hamiltonian.ipynb
Quiskit/: Qiskit_1.ipynb
Tensorflow_quantum/: TFQ.ipynb
data/: rename_images.sh
data_processing/: 0_get_distilled_data_mnist.py  1_get_distilled_data_fmnist.py  check_distilled_data.py  class_map.csv  load_mnist_data.ipynb  processing_FashionMNIST.ipynb  processing_mnist.ipynb  quantum_eval_metrics.csv
embeddings/: 1_visualize.ipynb  get_embeddings.py
figures/: 16qubit_fmnist.csv  16qubit_mnist.csv  boxplot.ipynb  scatter_plot.ipynb
part2_Classic_classification/: k_fold_validation.py
part3_qubit_classification/: SVM_16_qubit-Copy1.ipynb
q_Net/: .gitignore  README.md  split_data.sh
q_Net/part1_VE_extraction/: auto_VE_extraction.ipynb  auto_ve_extraction.py  extract_embeddings.ipynb
q_Net/part2_Classic_classification/: classifier_MLP.ipynb  classifier_Random_Forest.ipynb  classifier_SVM_improved.ipynb  classifier_XGboost.ipynb
q_Net/pretrain/: pretrain.py
q_net/: rename_images.sh
qcirq_qubit_classification/: train_cirq.ipynb
qiskit/: Qiskit_1.ipynb  calibrating_armonk.ipynb  code_base.ipynb  token.txt
qiskit_qubit_classification/: SVM_16_qubit-Copy1.ipynb  SVM_16_qubit.ipynb
qnet/: embeddings.py
qve/: __init__.py  core.py  metrics.py  process.py  utils.py
scripts/: automate_merge.sh  classical_baseline.py  clip.sh  cross_validation_baseline.py  qsvm_cuda_embeddings.py
(+51 files in other folders)
