[project]
name = "qve"
version = "0.1.0"
description = "Quantum VE package"
authors = [{ name = "Sebastian Cajas", email = "scajasordonez@gmail.com" }]
dependencies = [
    "scikit-learn==1.6.1",
    "opt_einsum==3.4.0",
    "qiskit==1.2.4",
    "cuquantum==24.8.0.2",
    "cuquantum-python==24.8.0.2",
    "tabulate==0.9.0",
    "pandas==2.2.2",
    "matplotlib==3.10.0",
    "seaborn==0.13.2",
    "sympy==1.13.1",
    "joblib==1.4.2",
    "setuptools==75.1.0",
    "scipy==1.14.1"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qve"]  